--- a/style.css
+++ b/style.css
@@ -169,13 +169,7 @@ tr.collected {
     text-shadow: none;
 }
 
-a:link {
-    color: black; /* Non-visited link */
-}
-
-a:visited {
-    color: green; /* Visited link */
-}
+{
 
 @media (max-width: 768px) {
     header h1 {
